# image-retargeting

./: .gitignore  CMakeLists.txt  README.md  main.cc  readme.md  seam-carving.py
src/: CMakeLists.txt  demo.cc  image_retargeter.cc  image_retargeter.hh  main.cc  seam-carving.py  seam_carving.cc  seam_carving.hh
